<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/keys_1"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_1"
        />
        <Button
            android:id="@+id/keys_2"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_2"
        />
        <Button
            android:id="@+id/keys_3"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_3"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/keys_4"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_4"
        />
        <Button
            android:id="@+id/keys_5"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_5"
        />
        <Button
            android:id="@+id/keys_6"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_6"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/keys_7"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_7"
        />
        <Button
            android:id="@+id/keys_8"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_8"
        />
        <Button
            android:id="@+id/keys_9"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_9"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/keys_0"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_0"
        />
        <Button
            android:id="@+id/keys_dot"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_dot"
        />
        <Button
            android:id="@+id/keys_back_space"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_back_space"
        />
    </LinearLayout>
</LinearLayout>
