<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/main_keysF1"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F1"
        />
        <Button
            android:id="@+id/main_keysF2"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F2"
        />
        <Button
            android:id="@+id/main_keysF3"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F3"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
             android:id="@+id/main_keysF4"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F4"
        />
        <Button
             android:id="@+id/main_keysF5"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F5"
        />
        <Button
             android:id="@+id/main_keysF6"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F6"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
             android:id="@+id/main_keysF7"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F7"
        />
        <Button
             android:id="@+id/main_keysF8"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F8"
        />
        <Button
            android:id="@+id/main_keysF9"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F9"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
             android:id="@+id/main_keysF10"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F10"
        />
        <Button
             android:id="@+id/main_keysF11"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F11"
        />
        <Button
             android:id="@+id/main_keysF12"
	        style="@style/MainKeysNumsStyle"
	        android:text="@string/main_keys_F12"
        />
    </LinearLayout>
</LinearLayout>
