<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical">
    
        <EditText
            android:id="@+id/update_currPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="@string/update_password_fragment_inputagopassword"
            android:inputType="textPassword"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/update_newPwd"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update_password_fragment_inputnowpassword"
            android:inputType="textPassword"
            android:textSize="15sp"
            />
        
        <EditText
            android:id="@+id/update_rePwd"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update_password_fragment_inputrepassword"
            android:inputType="textPassword"
            android:textSize="15sp"
            />
        
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent">
            
            <Button
                android:id="@+id/update_password_sure" 
                style="@style/LoginBtnStyle"
                android:text="@string/update_password_fragment_sureupdate"
                />
            <Button 
                android:id="@+id/update_password_exit"
                style="@style/LoginBtnStyle"
                android:text="@string/update_password_fragment_exitupdate"
                />
            
        </LinearLayout>
</LinearLayout>
