<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="horizontal" >
    
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/text_scan_codebar"
       android:gravity="center"
       android:textSize="@dimen/main_scan_text_size"
       android:textColor="#000000"
       />
   
    <EditText
        android:id="@+id/main_scan_etScanCodeBar"
        android:layout_width="0dp"
        android:layout_margin="2dp"
        android:layout_height="@dimen/main_scan_edittext_height"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="3dp"
        android:layout_gravity="center"
        android:singleLine="true"
        android:inputType="text"
        android:background="@drawable/main_scan_edittext_shape"
        />

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/scan_text_codebar_goods_bar"
       android:gravity="bottom"
       android:paddingBottom="3dp"
       android:paddingRight="10dp"
       android:textSize="@dimen/main_scan_text_size"
       android:textColor="#000000"
       />
    
    <Button 
        android:id="@+id/main_scan_btn_sure"
        style="@style/MainScanBtnStyle"
        android:text="@string/scan_btn_sure"
        />
    
    <Button 
        android:id="@+id/main_scan_btn_fkeys"
        style="@style/MainScanBtnStyle"
        android:text="@string/scan_codebar_fkeys"
        />
    
</LinearLayout>

