<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/text_id"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:text="@string/main_goodslist_title_num" />
    
    <View 
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

    <TextView
        android:id="@+id/text_goods_name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/main_goodslist_title_goodsname" />
    
     <View 
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

     <TextView
        android:id="@+id/text_codeBar"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:textColor="#000000"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:singleLine="true"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/main_goodslist_title_cbarcode" />
     
     <View 
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

     <TextView
        android:id="@+id/text_num"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/main_goodslist_title_amount" />
     
     <View 
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

     <TextView
        android:id="@+id/text_curPrice"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/main_goodslist_title_accprice" />
     
     <View 
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

     <TextView
        android:id="@+id/text_money"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/main_goodslist_title_paymoney" />

</LinearLayout>