<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:baselineAligned="false"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:gravity="center"
    android:orientation="horizontal" >
	
	<LinearLayout
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:orientation="horizontal"
	    >
	     <TextView 
	        style="@style/MainTotalPriceTextStyle"
	        android:text="@string/main_total_agoprice"
        	/>
	    <TextView
	        android:id="@+id/total_ago_money" 
	        style="@style/MainTotalPriceTVStyle"
	        android:textColor="#008A48"
	        android:text="@string/main_total_nummoney"
	        />
	</LinearLayout>
	
	<!-- 
	<LinearLayout
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        style="@style/MainTotalPriceTextStyle"
	        android:text="@string/main_total_currprince"
	        />
		<TextView 
		    android:id="@+id/total_acc_price"
	        style="@style/MainTotalPriceTVStyle"
	        android:textColor="#008A48"
	        android:text="@string/main_total_nummoney"
	        />
	</LinearLayout>
	 -->
	 
	<LinearLayout
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        style="@style/MainTotalPriceTextStyle"
	        android:text="@string/total_special_price"
	        />
		<TextView 
		    android:id="@+id/total_special_price"
	        style="@style/MainTotalPriceTVStyle"
	        android:textColor="#008A48"
	        android:text="@string/main_total_nummoney"
	        />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        style="@style/MainTotalPriceTextStyle"
	        android:text="@string/total_vip_price"
	        />
		<TextView 
		    android:id="@+id/total_vip_price"
	        style="@style/MainTotalPriceTVStyle"
	        android:textColor="#008A48"
	        android:text="@string/main_total_nummoney"
	        />
	</LinearLayout>
	
	<LinearLayout
	    android:gravity="center"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        style="@style/MainTotalPriceTextStyle"
	        android:text="@string/main_total_totalmoney"
	        />
		<TextView 
		    android:id="@+id/total_money"
	        style="@style/MainTotalPriceTVStyle"
	        android:textColor="#1F33ED"
	        android:text="@string/main_total_nummoney"
	        />
	</LinearLayout>
	
</LinearLayout>
