<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
  
    tools:context=".LoginActivity" >

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_ing"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:layout_gravity="center">
             <TextView 
		        android:layout_width="match_parent" 
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:text="@string/login_text_logo"
		        android:textColor="@color/red"
		        android:layout_marginBottom="10dp"
		        android:textSize="23sp"
		        android:gravity="center"
		        />
             
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 android:layout_margin="3dp"
                >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:gravity="bottom|center"
                    android:text="账号："
                    />
                
                <EditText
	                android:id="@+id/account"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/login_hint_account"
	                android:maxLines="1"
	                android:singleLine="true"
	                />
            </LinearLayout>

            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal"
                >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:gravity="bottom|center"
                    android:text="账号："
                    />
                
                <EditText
	                android:id="@+id/password"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/login_hint_password"
	                android:imeActionId="@+id/login"
	                android:imeOptions="actionUnspecified"
	                android:inputType="textPassword"
	                android:maxLines="1"
	                android:singleLine="true" />
            </LinearLayout>

            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="right"
                >
                
              <Button
                android:id="@+id/login_btn_sure"
               	style="@style/LoginBtnStyle"
               	android:textSize="@dimen/login_btn_size"
                android:text="@string/login_btn_sure" />
                
              <Button
                android:id="@+id/login_btn_exit"
               	style="@style/LoginBtnStyle"
               	android:textSize="@dimen/login_btn_size"
                android:text="@string/login_btn_exit" />
                
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</merge>
