<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:orientation="vertical" >
    
    <LinearLayout  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal"   
        android:padding="3dp"
        android:layout_gravity="center">  
      
        <ImageView  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:background="@drawable/logo"  
            />  
        <TextView   
            android:id="@+id/pay_fragment_money"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="VIP卡号"  
            android:textSize="20dp"
            android:paddingLeft="5dp"  
            android:textColor="@color/red"  
            android:layout_gravity="center"  
            />  
    </LinearLayout>  
      
     <View   
            android:layout_width="match_parent"  
            android:layout_height="2dip"  
            android:background="@color/highBlue"/> 
    
    <EditText
        android:id="@+id/vip_fragment_inputEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="10dp"
        android:hint="@string/vip_fragment_input_vipnum"
        />
    <LinearLayout 
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:gravity="right"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="8dp"
	    android:orientation="horizontal">
    
	    <Button 
	        android:id="@+id/vip_calulate_sure"
	        style="@style/LoginBtnStyle"
	        android:text="@string/update_password_fragment_sureupdate"
	        />
	    <Button
	        android:id="@+id/vip_calulate_exit"
	        style="@style/LoginBtnStyle"
	        android:text="@string/update_password_fragment_exitupdate"
	        />
	</LinearLayout>
</LinearLayout>
