<?xml version="1.0" encoding="utf-8"?>
	  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="2dp"
	    android:layout_marginTop="5dp"
	    android:background="#ffffff"
	    android:orientation="vertical" >
	    
	    <LinearLayout  
	        android:layout_width="match_parent"  
	        android:layout_height="wrap_content"  
	        android:orientation="horizontal"   
	        android:padding="3dp"
	        android:layout_gravity="center">  
	      
	        <ImageView  
	            android:layout_width="wrap_content"  
	            android:layout_height="wrap_content"  
	            android:background="@drawable/logo"  
	            />  
	        <TextView   
	            android:id="@+id/pay_fragment_money"
	            android:layout_width="wrap_content"  
	            android:layout_height="wrap_content"  
	            android:text="VIP卡号"  
	            android:textSize="20dp"
	            android:paddingLeft="5dp"  
	            android:textColor="@color/red"  
	            android:layout_gravity="center"  
	            />  
	    </LinearLayout>  
	      
	     <View   
	            android:layout_width="match_parent"  
	            android:layout_height="2dip"  
	            android:background="@color/highBlue"/> 
	            
	     <LinearLayout 
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:orientation="horizontal"
	        
	         >
	         <EditText
		        android:id="@+id/vip_fragment_inputEt"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:background="@null"
		        android:layout_marginLeft="5dp"
		        android:hint="@string/vip_fragment_input_vipnum"
	      	  />
		    <ImageView 
		        android:id="@+id/keys_icon"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:background="@drawable/ic_dialog_keyboard"
			    android:layout_gravity="right|center"
			    android:layout_marginRight="20dp"
			    />
	     </LinearLayout>
	    
	      <View   
	            android:layout_width="match_parent"  
	            android:layout_height="1dip"  
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:background="@color/black"/> 
	    
	    <LinearLayout 
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:gravity="right"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="8dp"
		    android:orientation="horizontal">
	    
		    <Button 
		        android:id="@+id/vip_calulate_sure"
		        style="@style/LoginBtnStyle"
		        android:text="@string/update_password_fragment_sureupdate"
		        />
		    <Button
		        android:id="@+id/vip_calulate_exit"
		        style="@style/LoginBtnStyle"
		        android:text="@string/update_password_fragment_exitupdate"
		        />
	</LinearLayout>
	
</LinearLayout>

